force-app/main/default/objects/DailyDistance__c/DailyDistance__c.object-meta.xml
<CustomObject>
    <description>Objeto customizado para contabilidade de distância percorrida diariamente</description>
    <label>Distância Diária</label>
    <nameField>
        <displayFormat>D-{000000000}</displayFormat>
        <label>Código da distância diária</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Distâncias Diárias</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>