force-app/main/default/objects/DailyDistance__c/fields/Ano__c.field-meta.xml
<CustomField>
    <fullName>Ano__c</fullName>
    <formula>YEAR( Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ano</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>