force-app/main/default/objects/DailyDistance__c/fields/CANAL__c.field-meta.xml
<CustomField>
    <fullName>CANAL__c</fullName>
    <formula>Text(ServiceResourceId__r.RelatedRecord.CANAL__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CANAL</label>
    <type>Text</type>
</CustomField>