force-app/main/default/objects/DailyDistance__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <defaultValue>DATEVALUE( $System.OriginDateTime )</defaultValue>
    <description>Dia da contabilidade de distância.</description>
    <inlineHelpText>Dia da contabilidade de distância.</inlineHelpText>
    <label>Data</label>
    <required>true</required>
    <type>Date</type>
</CustomField>