force-app/main/default/objects/DailyDistance__c/fields/Distance__c.field-meta.xml
<CustomField>
    <fullName>Distance__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Distância percorrida (em metros).</description>
    <inlineHelpText>Distância percorrida (em metros).</inlineHelpText>
    <label>Distância percorrida em metros</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>