force-app/main/default/objects/DailyDistance__c/fields/KM__c.field-meta.xml
<CustomField>
    <fullName>KM__c</fullName>
    <formula>Distance__c / 1000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>