force-app/main/default/objects/DailyDistance__c/fields/Latitude__c.field-meta.xml
<CustomField>
    <fullName>Latitude__c</fullName>
    <description>Ultimo valor captado para a latitude do posicionamento informado.</description>
    <inlineHelpText>Ultimo valor captado para a latitude do posicionamento informado.</inlineHelpText>
    <label>Latitude</label>
    <length>30</length>
    <type>Text</type>
</CustomField>