force-app/main/default/objects/DailyDistance__c/fields/Longitude__c.field-meta.xml
<CustomField>
    <fullName>Longitude__c</fullName>
    <description>Ultimo valor captado para a longitude do posicionamento informado.</description>
    <inlineHelpText>Ultimo valor captado para a longitude do posicionamento informado.</inlineHelpText>
    <label>Longitude</label>
    <length>30</length>
    <type>Text</type>
</CustomField>