force-app/main/default/objects/DailyDistance__c/fields/m_s__c.field-meta.xml
<CustomField>
    <fullName>m_s__c</fullName>
    <formula>CASE(
  MONTH( Date__c ),
  1, &quot;01(Janeiro)&quot;,
  2, &quot;02(Fevereiro)&quot;,
  3, &quot;03(Março)&quot;,
  4, &quot;04(April&quot;,
  5, &quot;05(Maio)&quot;,
  6, &quot;06(Junho)&quot;,
  7, &quot;07(Julho)&quot;,
  8, &quot;08(Agosto)&quot;,
  9, &quot;09(Setembro)&quot;,
  10, &quot;10(Outubro)&quot;,
  11, &quot;11(Novembro)&quot;,
  &quot;12(Dezembro)&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>mês</label>
    <type>Text</type>
</CustomField>