force-app/main/default/objects/DailyDistance__c/fields/PERFIL__c.field-meta.xml
<CustomField>
    <fullName>PERFIL__c</fullName>
    <formula>ServiceResourceId__r.RelatedRecord.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PERFIL</label>
    <type>Text</type>
</CustomField>