force-app/main/default/objects/DailyDistance__c/fields/ServiceResourceId__c.field-meta.xml
<CustomField>
    <fullName>ServiceResourceId__c</fullName>
    <description>Recurso de serviço (Field Service) para o qual os dados se referem.</description>
    <label>Pessoa</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Distâncias Diárias</relationshipLabel>
    <relationshipName>DailyDistances</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>